# phoxi_camera_ros2

./: README.md
docker/: Dockerfile  bashrc-git-prompt  build.sh  enter.sh  entrypoint  run.sh
phoxi_camera_msgs/: CMakeLists.txt  package.xml
phoxi_camera_msgs/srv/: PhoxiCloud.idl  PhoxiFull.idl  PhoxiImg.idl
phoxi_camera_ros2/: CMakeLists.txt  package.xml
phoxi_camera_ros2/include/phoxi_camera_ros2/: lifecycle_interface.hpp  phoxi_camera.hpp  phoxi_camera_node.hpp  visibility_control.hpp
phoxi_camera_ros2/launch/: phoxi_camera.launch.py
phoxi_camera_ros2/meshes/: M+_Motion_Cam-3D_FOV.stl
phoxi_camera_ros2/param/: defaults.param.yaml
phoxi_camera_ros2/rviz/: default.rviz
phoxi_camera_ros2/src/: lifecycle_interface.cpp  phoxi_camera.cpp  phoxi_camera_node.cpp
phoxi_camera_ros2/urdf/: M+_Motion_Cam-3D.xacro  phoxi.xacro
